[project]
name = "proyek-analisis-sentimen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-play-scraper>=1.2.7",
    "nltk>=3.9.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
